--- a/notifications.html
+++ b/notifications.html
@@ -239,41 +239,47 @@
                     <div>John Doe</div>
                   </div>
                   <ul class="flex flex-col mt-5 text-center">
-                    <li
-                      class="
-                        p-3
-                        hover:bg-gray-300
-                        transition
-                        duration-500
-                        ease-in-out
-                      "
-                    >
-                      Account Information
-                    </li>
+                    <a href="profile.html">
+                      <li
+                        class="
+                          p-3
+                          hover:bg-gray-300
+                          transition
+                          duration-500
+                          ease-in-out
+                        "
+                      >
+                        Account Information
+                      </li>
+                    </a>
                     <hr class="text-white" />
-                    <li
-                      class="
-                        hover:bg-gray-300
-                        p-3
-                        transition
-                        duration-500
-                        ease-in-out
-                      "
-                    >
-                      Company Information
-                    </li>
+                    <a href="CompanyInfo.html">
+                      <li
+                        class="
+                          hover:bg-gray-300
+                          p-3
+                          transition
+                          duration-500
+                          ease-in-out
+                        "
+                      >
+                        Company Information
+                      </li>
+                    </a>
                     <hr class="text-white" />
-                    <li
-                      class="
-                        p-3
-                        transition
-                        duration-500
-                        ease-in-out
-                        bg-gray-300
-                      "
-                    >
-                      Notifications
-                    </li>
+                    <a href="notifications.html">
+                      <li
+                        class="
+                          p-3
+                          transition
+                          duration-500
+                          ease-in-out
+                          bg-gray-300
+                        "
+                      >
+                        Notifications
+                      </li>
+                    </a>
                     <div class="mt-48">
                       <hr class="text-white" />
                       <li
