--- a/CompanyInfo.html
+++ b/CompanyInfo.html
@@ -43,12 +43,12 @@
       <div class="bg-gray-200 h-screen font-mont text-gray-500">
         <div class="flex flex-row">
           <div class="basis-1/4 p-3">
-            <div class="rounded-lg p-5">
+            <div class="rounded-lg p-5 bg-white">
               <div class="flex justify-center mb-5">
                 <img src="./Assets/Logo.png" alt="" />
               </div>
               <hr class="text-gray-500 mb-5" />
-              <div class="bg-">
+              <div class="">
                 <ul class="flex flex-col space-y-5 font-semibold">
                   <li
                     class="
@@ -59,7 +59,7 @@
                       hover:text-green-500
                       hover:border-r-green-500
                       hover:border-r-4 
-                      hover:bg-green-200
+                      hover:bg-green-200 
                       p-3
                     "
                   >
@@ -230,7 +230,7 @@
                   </svg>
                 </div>
               </div>
-            <div class="bg-white rounded-lg h-screen">
+            <div class="bg-white rounded-lg">
               <div class="flex flex-row p-5">
                 <div
                   class="
@@ -259,7 +259,9 @@
                     <div>John Doe</div>
                   </div>
                   <ul class="flex flex-col mt-5 text-center uppercase text-sm font-medium">
-                    <li class="p-3">Account Information</li>
+                    <a href="profile.html">
+                    <li class="p-3 cursor-pointer hover:bg-gray-300 transition duration-500 ease-in-out">Account Information</li>
+                    </a>
                     <hr class="text-white" />
                     <li
                       class="
@@ -267,23 +269,25 @@
                         transition
                         duration-500
                         ease-in-out
-                        bg-gray-300 
+                        bg-gray-300 cursor-pointer
                       "
                     >
                       Company Information
                     </li>
                     <hr class="text-white" />
+                    <a href="notifications.html">
                     <li
                       class="
                         p-3
                         hover:bg-gray-300
                         transition
                         duration-500
-                        ease-in-out
+                        ease-in-out cursor-pointer
                       "
                     >
                       Notifications
                     </li>
+                    </a>
                     <div class="mt-48">
                       <hr class="text-white" />
                       <li
@@ -293,7 +297,10 @@
                           transition
                           duration-500
                           ease-in-out
+                          test-modal
+                          cursor-pointer
                         "
+                         data-modal-toggle="popup-modal"
                       >
                         Delete Account
                       </li>
@@ -392,6 +399,127 @@
           </div>
         </div>
       </div>
+
+      <!-- Modal -->
+           <div
+        class="
+          hidden
+          overflow-y-auto overflow-x-hidden
+          fixed
+          right-0
+          left-0
+          top-4
+          z-50
+          justify-center
+          items-center
+          md:inset-0
+          h-modal
+          sm:h-full
+        "
+        id="popup-modal"
+      >
+        <div class="relative px-4 max-w-lg w-full h-full md:h-auto">
+          <!-- Modal content -->
+          <div class="relative bg-white px-4 rounded-lg shadow w-full">
+            <!-- Modal header -->
+            <div class="flex justify-end p-2">
+              <button
+                type="button"
+                class="
+                  text-gray-400
+                  bg-transparent
+                  hover:bg-gray-200 hover:text-gray-300
+                  rounded-lg
+                  text-sm
+                  p-1.5
+                  ml-auto
+                  inline-flex
+                  items-center
+                "
+                data-modal-toggle="popup-modal"
+              >
+                <svg
+                  class="w-5 h-5"
+                  fill="currentColor"
+                  viewBox="0 0 20 20"
+                  xmlns="http://www.w3.org/2000/svg"
+                >
+                  <path
+                    fill-rule="evenodd"
+                    d="M4.293 4.293a1 1 0 011.414 0L10 8.586l4.293-4.293a1 1 0 111.414 1.414L11.414 10l4.293 4.293a1 1 0 01-1.414 1.414L10 11.414l-4.293 4.293a1 1 0 01-1.414-1.414L8.586 10 4.293 5.707a1 1 0 010-1.414z"
+                    clip-rule="evenodd"
+                  ></path>
+                </svg>
+              </button>
+            </div>
+            <!-- Modal body -->
+            <div class="p-20 pt-0 text-center">
+              <svg
+                xmlns="http://www.w3.org/2000/svg"
+                class="h-20 w-20 mb-4 mx-auto text-red-500"
+                fill="none"
+                viewBox="0 0 24 24"
+                stroke="currentColor"
+              >
+                <path
+                  stroke-linecap="round"
+                  stroke-linejoin="round"
+                  stroke-width="2"
+                  d="M10 14l2-2m0 0l2-2m-2 2l-2-2m2 2l2 2m7-2a9 9 0 11-18 0 9 9 0 0118 0z"
+                />
+              </svg>
+              <h1 class="text-2xl">Delete Account!!</h1>
+              <h3 class="mb-5 font-normal text-gray-500 dark:text-gray-400">
+                Are you sure you want to delete this account? this action cannot
+                be undone
+              </h3>
+              <button
+                data-modal-toggle="popup-modal"
+                type="button"
+                class="
+                  text-gray-500
+                  bg-white
+                  hover:bg-gray-100
+                  focus:ring-4 focus:ring-gray-300
+                  rounded-lg
+                  border border-gray-400
+                  text-sm
+                  font-medium
+                  px-5
+                  py-2.5
+                "
+              >
+                cancel
+              </button>
+              <button
+                data-modal-toggle="popup-modal"
+                type="button"
+                class="
+                  text-white
+                  bg-red-600
+                  hover:bg-red-800
+                  focus:ring-4 focus:ring-red-300
+                  font-medium
+                  rounded-lg
+                  text-sm
+                  inline-flex
+                  items-center
+                  px-5
+                  py-2.5
+                  text-center
+                  mr-2
+                "
+              >
+                Yes, Delete it
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
+      <!-- End Modal -->
+
     </section>
+
+        <script src="https://unpkg.com/@themesberg/flowbite@1.2.0/dist/flowbite.bundle.js"></script>
   </body>
 </html>
