--- a/newOffer.html
+++ b/newOffer.html
@@ -21,14 +21,19 @@
         theme: {
           extend: {
             backgroundImage: {
-              bg: "url('./Assets/Products-bg.png')",
-              footer:
-                "url('https://images.unsplash.com/photo-1495107334309-fcf20504a5ab?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80')",
+              funds: "url('./Assets/Add Funds-01.png')",
             },
             colors: {
               secondary: "#2E6B3E",
               primary: "#4DB268",
-              background: "#F2F2F2",
+              mainBg: "#F2F2F2",
+              thirteenBg: "#595959",
+              lightGray: "#8C8C8C",
+              darkGray: "#595959",
+            },
+            fontFamily: {
+              mont: ["montserrat"],
+              san: ["Open Sans"],
             },
           },
         },
@@ -42,7 +47,7 @@
       }
     </style>
   </head>
-  <body>
+  <body class="bg-mainBg">
     <div class="h-full relative">
       <nav
         role="navigation"
@@ -55,6 +60,7 @@
           text-white
           relative
           px-36
+          font-mont
         "
       >
         <a href="index.html" class="ml-6"
@@ -118,7 +124,7 @@
         <h1 class="text-3xl font-semibold text-white">New Offer</h1>
       </header>
       <main>
-        <div class="px-40 py-10 bg-background">
+        <div class="px-40 py-10 bg-background font-mont text-gray-400">
           <div class="flex flex-row space-x-3 mb-3">
             <svg
               xmlns="http://www.w3.org/2000/svg"
@@ -147,7 +153,9 @@
             "
           >
             <div class="border-b-2 border-gray-200 py-8">
-              <h1 class="mb-3 font-semibold">Product Information</h1>
+              <h1 class="mb-3 font-semibold text-darkGray">
+                Product Information
+              </h1>
               <div class="grid grid-cols-3 gap-5">
                 <div class="flex flex-col space-y-4">
                   <div
@@ -377,7 +385,7 @@
             </div>
             <!-- Second Row -->
             <div class="border-b-2 border-gray-200 py-3">
-              <label class="font-semibold mb-3">Quality</label>
+              <label class="font-semibold mb-3 text-darkGray">Quality</label>
               <div class="grid grid-cols-3 gap-5 py-5">
                 <div class="flex flex-col space-y-4">
                   <div>
@@ -449,7 +457,9 @@
             </div>
             <!-- Third Row -->
             <div class="border-b-2 border-gray-200 py-5">
-              <h1 class="font-semibold mb-3">Logistics Information</h1>
+              <h1 class="font-semibold mb-3 text-darkGray">
+                Logistics Information
+              </h1>
               <div class="grid grid-cols-3 gap-5">
                 <div class="flex flex-col space-y-4">
                   <div>
@@ -514,7 +524,7 @@
               </div>
             </div>
             <div class="border-b-2 py-3 border-gray-300">
-              <h1>Additional Comments</h1>
+              <h1 class="text-darkGray">Additional Comments</h1>
               <textarea
                 name=""
                 id=""
