--- a/offerReview.html
+++ b/offerReview.html
@@ -21,14 +21,19 @@
         theme: {
           extend: {
             backgroundImage: {
-              bg: "url('./Assets/Products-bg.png')",
-              footer:
-                "url('https://images.unsplash.com/photo-1495107334309-fcf20504a5ab?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8&auto=format&fit=crop&w=1470&q=80')",
+              funds: "url('./Assets/Add Funds-01.png')",
             },
             colors: {
               secondary: "#2E6B3E",
               primary: "#4DB268",
-              background: "#F2F2F2",
+              mainBg: "#F2F2F2",
+              thirteenBg: "#595959",
+              lightGray: "#8C8C8C",
+              darkGray: "#595959",
+            },
+            fontFamily: {
+              mont: ["montserrat"],
+              san: ["Open Sans"],
             },
           },
         },
@@ -42,8 +47,8 @@
       }
     </style>
   </head>
-  <body>
-    <div class="h-full relative">
+  <body class="bg-mainBg">
+    <div class="h-full relative font-mont">
       <nav
         role="navigation"
         class="
@@ -77,7 +82,16 @@
           </svg>
         </div>
         <div
-          class="hidden md:block mr-4 p-5 space-x-4 z-10 text-gray-200"
+          class="
+            hidden
+            md:block
+            mr-4
+            p-5
+            space-x-4
+            z-10
+            text-gray-200
+            font-mont
+          "
           id="menu"
         >
           <a
@@ -134,9 +148,9 @@
                 d="M10 19l-7-7m0 0l7-7m-7 7h18"
               />
             </svg>
-            <h1>Back to Products</h1>
+            <h1 class="text-darkGray">Back</h1>
           </div>
-          <div class="flex flex-row mt-3 space-x-3">
+          <div class="flex flex-row mt-3 space-x-3 text-gray-400">
             <div class="basis-3/4 flex flex-col space-y-5">
               <div
                 class="grid grid-cols-2 bg-white shadow-sm shadow-gray-400 p-5"
@@ -194,7 +208,7 @@
                   <!-- Second Column -->
                   <div class="name h-full w-full p-2 flex flex-col space-y-5">
                     <div>
-                      <h1>Palm Kernel</h1>
+                      <h1 class="text-darkGray font-medium">Palm Kernel</h1>
                       <span class="text-sm text-gray-400">1 bag(125kg)</span>
                     </div>
                     <div class="flex flex-row">
@@ -213,7 +227,9 @@
                       </svg>
                     </div>
                     <div class="flex flex-row space-x-2">
-                      <p>Sellers rating:3.5</p>
+                      <p>
+                        Sellers rating:<span class="text-darkGray">3.5</span>
+                      </p>
                       <svg
                         xmlns="http://www.w3.org/2000/svg"
                         class="h-5 w-5 text-green-500"
@@ -239,11 +255,11 @@
                   "
                 >
                   <div class="p-3 text-center">
-                    <h1>Price</h1>
+                    <h1 class="text-darkGray font-medium">Price</h1>
                     <p>&#8358;32,000.00</p>
                   </div>
                   <div class="flex flex-col p-3">
-                    <h1 class="mb-2">Quantity</h1>
+                    <h1 class="mb-2 text-darkGray font-medium">Quantity</h1>
                     <div class="flex flex-row space-x-3">
                       <div class="bg-gray-500 rounded-md text-white">
                         <svg
@@ -291,36 +307,42 @@
                 <div
                   class="border-r-2 border-gray-200 flex flex-col space-y-5 p-5"
                 >
-                  <h1>Product information</h1>
+                  <h1 class="text-darkGray font-medium">Product information</h1>
                   <div>
-                    <h1>ID:</h1>
+                    <h1 class="text-darkGray font-medium">ID:</h1>
                     <h1>214163</h1>
                   </div>
                   <div>
-                    <h1>Product:</h1>
+                    <h1 class="text-darkGray font-medium">Product:</h1>
                     <h1>Oil Seed</h1>
                   </div>
                   <div>
-                    <h1>Weight:</h1>
+                    <h1 class="text-darkGray font-medium">Weight:</h1>
                     <h1>125kg</h1>
                   </div>
-                  <h1>Price Per Weight Unit:</h1>
+                  <h1 class="text-darkGray font-medium">
+                    Price Per Weight Unit:
+                  </h1>
                 </div>
                 <div class="Flex flex-col space-y-5 p-5">
                   <div>
-                    <h1>Price Per Weight Unit:</h1>
+                    <h1 class="text-darkGray font-medium">
+                      Price Per Weight Unit:
+                    </h1>
                     <h1>-</h1>
                   </div>
                   <div>
-                    <h1>Production Mode:</h1>
+                    <h1 class="text-darkGray font-medium">Production Mode:</h1>
                     <h1>-</h1>
                   </div>
                   <div>
-                    <h1>Crop Year:</h1>
+                    <h1 class="text-darkGray font-medium">Crop Year:</h1>
                     <h1>2020/2021</h1>
                   </div>
                   <div>
-                    <h1>Packaging for Shipment:</h1>
+                    <h1 class="text-darkGray font-medium">
+                      Packaging for Shipment:
+                    </h1>
                     <h1>-</h1>
                   </div>
                 </div>
@@ -332,23 +354,29 @@
                 <div
                   class="border-r-2 border-gray-200 flex flex-col space-y-5 p-5"
                 >
-                  <h1>Delivery Details</h1>
+                  <h1 class="text-darkGray font-medium">Delivery Details</h1>
                   <div>
-                    <h1>Logistics:</h1>
+                    <h1 class="text-darkGray font-medium">Logistics:</h1>
                     <h1>-</h1>
                   </div>
                   <div>
-                    <h1>Initial Delivery State:</h1>
+                    <h1 class="text-darkGray font-medium">
+                      Initial Delivery State:
+                    </h1>
                     <h1>27 Jun, 2021</h1>
                   </div>
                 </div>
                 <div class="flex flex-col space-y-5 p-5">
                   <div class="mb-3">
-                    <h1>Final Delivery Date:</h1>
+                    <h1 class="text-darkGray font-medium">
+                      Final Delivery Date:
+                    </h1>
                     <h1>20 Aug, 2021</h1>
                   </div>
                   <div>
-                    <h1>Offer Expiry Date:</h1>
+                    <h1 class="text-darkGray font-medium">
+                      Offer Expiry Date:
+                    </h1>
                     <h1>01 Sept, 2021</h1>
                   </div>
                 </div>
@@ -356,7 +384,9 @@
 
               <div class="bg-white shadow-sm shadow-gray-400 p-5">
                 <div class="mb-10">
-                  <h1>Additional Comments:</h1>
+                  <h1 class="text-darkGray font-medium">
+                    Additional Comments:
+                  </h1>
                   <h1>-</h1>
                 </div>
                 <button
@@ -380,7 +410,7 @@
             <div
               class="
                 bg-white
-                p-3
+                p-5
                 shadow-gray-400 shadow-sm
                 basis-3/12
                 h-screen
@@ -388,13 +418,13 @@
                 space-y-5
               "
             >
-              <div class="grid grid-cols-2">
+              <div class="grid grid-cols-2 text-sm">
                 <div class="flex flex-col space-y-3 text-gray-400">
                   <p>Price</p>
                   <p>VAT</p>
                   <p>Delivery Fee</p>
                 </div>
-                <div class="flex flex-col space-y-3">
+                <div class="flex flex-col space-y-3 text-darkGray">
                   <p>&#8358;32,000.00</p>
                   <p>&#8358;32,000.00</p>
                   <p>&#8358;32,000.00</p>
@@ -408,8 +438,8 @@
                   border-b-2 border-gray-200
                 "
               >
-                <p class="text-gray-500">Total</p>
-                <p>&#8358;32,000.00</p>
+                <p>Total</p>
+                <p class="text-darkGray">&#8358;32,000.00</p>
               </div>
               <button
                 class="
