--- a/index.html
+++ b/index.html
@@ -51,7 +51,16 @@
     <div class="h-full relative">
       <nav
         role="navigation"
-        class="flex justify-between items-center px-40 lg:h-24 sm:h-16 bg-white relative"
+        class="
+          flex
+          justify-between
+          items-center
+          px-40
+          lg:h-24
+          sm:h-16
+          bg-white
+          relative
+        "
       >
         <a href="index.html" class="ml-6"
           ><img src="./Assets/Logo.png" class="lg:w-full sm:w-1/2" alt=""
@@ -78,7 +87,13 @@
         >
           <a
             href="about.html"
-            class="hover:text-white transition duration-500 ease-in-out text-green-700"
+            class="
+              hover:text-white
+              transition
+              duration-500
+              ease-in-out
+              text-green-700
+            "
             >Home</a
           >
           <a
@@ -140,12 +155,33 @@
           </h1>
           <div class="btns mt-10">
             <button
-              class="bg-white text-green-500 hover:bg-green-500 hover:text-white transition duration-500 ease-in-out mr-5 rounded px-5 py-2"
+              class="
+                bg-white
+                text-green-500
+                hover:bg-green-500 hover:text-white
+                transition
+                duration-500
+                ease-in-out
+                mr-5
+                rounded
+                px-5
+                py-2
+              "
             >
               Request Sample
             </button>
             <button
-              class="bg-primary text-white hover:bg-white hover:text-green-500 transition duration-500 ease-in-out rounded px-5 py-2"
+              class="
+                bg-primary
+                text-white
+                hover:bg-white hover:text-green-500
+                transition
+                duration-500
+                ease-in-out
+                rounded
+                px-5
+                py-2
+              "
             >
               Order Now
             </button>
@@ -218,7 +254,19 @@
                 </div>
                 <div class="buttons px-4 mb-4">
                   <button
-                    class="flex flex-row hover:bg-green-700 font-regular w-full py-2 text-white rounded transition duration-500 ease-in-out bg-primary"
+                    class="
+                      flex flex-row
+                      hover:bg-green-700
+                      font-regular
+                      w-full
+                      py-2
+                      text-white
+                      rounded
+                      transition
+                      duration-500
+                      ease-in-out
+                      bg-primary
+                    "
                   >
                     <span class="h-full w-full">Place Order</span>
                   </button>
@@ -229,7 +277,14 @@
             <!-- Card 2 -->
             <div class="cards w-64">
               <div
-                class="max-w-sm rounded-lg overflow-hidden shadow-lg bg-white font-mont"
+                class="
+                  max-w-sm
+                  rounded-lg
+                  overflow-hidden
+                  shadow-lg
+                  bg-white
+                  font-mont
+                "
               >
                 <div class="">
                   <img
@@ -272,7 +327,19 @@
                 </div>
                 <div class="buttons px-4 pb-4">
                   <button
-                    class="flex flex-row text-white hover:bg-green-700 font-regular w-full py-2 rounded transition duration-500 ease-in-out bg-primary"
+                    class="
+                      flex flex-row
+                      text-white
+                      hover:bg-green-700
+                      font-regular
+                      w-full
+                      py-2
+                      rounded
+                      transition
+                      duration-500
+                      ease-in-out
+                      bg-primary
+                    "
                   >
                     <span class="w-full h-full">Place Order</span>
                   </button>
@@ -324,7 +391,19 @@
                 </div>
                 <div class="buttons px-4 mb-4">
                   <button
-                    class="flex flex-row text-white hover:bg-green-700 font-regular w-full py-2 rounded transition duration-500 ease-in-out bg-primary"
+                    class="
+                      flex flex-row
+                      text-white
+                      hover:bg-green-700
+                      font-regular
+                      w-full
+                      py-2
+                      rounded
+                      transition
+                      duration-500
+                      ease-in-out
+                      bg-primary
+                    "
                   >
                     <span class="w-full">Place Order</span>
                   </button>
@@ -337,7 +416,19 @@
 
           <div class="buttons px-4 py-6 -mt-5">
             <button
-              class="bg-white text-green-500 hover:bg-green-500 hover:text-white transition duration-500 ease-in-out mr-5 rounded hover:shadow-green-500 px-10 py-2"
+              class="
+                bg-white
+                text-green-500
+                hover:bg-green-500 hover:text-white
+                transition
+                duration-500
+                ease-in-out
+                mr-5
+                rounded
+                hover:shadow-green-500
+                px-10
+                py-2
+              "
             >
               See More
             </button>
@@ -379,7 +470,18 @@
         </div>
         <div class="text-center mb-16">
           <button
-            class="rounded border border-green-500 px-7 py-2 text-white hover:bg-green-700 hover:text-white transition duration-500 ease-in-out bg-primary"
+            class="
+              rounded
+              border border-green-500
+              px-7
+              py-2
+              text-white
+              hover:bg-green-700 hover:text-white
+              transition
+              duration-500
+              ease-in-out
+              bg-primary
+            "
           >
             Get Started
           </button>
@@ -387,13 +489,25 @@
       </section>
       <section class="footer-section">
         <div
-          class="footer-main-ctn bg-footer bg-cover bg-gray-900 bg-blend-multiply px-20 py-20 text-white"
+          class="
+            footer-main-ctn
+            bg-footer bg-cover bg-gray-900 bg-blend-multiply
+            w-full
+            px-20
+            py-20
+            text-white
+          "
         >
           <div
-            class="footer-ctn lg:grid lg:grid-cols-3 lg:gap-4 sm:block sm:text-left sm:space-y-4"
+            class="
+              px-60
+              footer-ctn
+              lg:grid lg:grid-cols-3 lg:gap-4
+              sm:block sm:text-left sm:space-y-4
+            "
           >
             <div class="grid-item">
-              <img src="/Assets/Eki Logo-white.svg" alt="" />
+              <img src="./Assets/Eki Logo-white.svg" alt="" />
             </div>
             <div class="grid-item">
               <ul>
@@ -403,12 +517,12 @@
                 <li>eki (Marketplace)</li>
                 <li>Products & Servivces</li>
                 <li>About Us</li>
-                d86d
                 <li>Contact Us</li>
               </ul>
             </div>
             <div class="grid-item">
               <ul>
+                <h4 class="font-semibold">For Inquiry</h4>
                 <li class="flex mt-3">
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -473,7 +587,7 @@
 
           <div class="buttom-ctn flex justify-center">
             <div class="">
-              <img src="/Assets/USAID.svg" alt="" />
+              <img src="./Assets/USAID.svg" alt="" />
             </div>
           </div>
           <hr class="mt-10" />
@@ -488,18 +602,16 @@
             <div class="socials">
               <ul class="flex flex-row float-right space-x-5">
                 <li>
-                  <i
-                    class="bx bxl-facebook-circle bx-tada bx-rotate-90 text-2xl"
-                  ></i>
+                  <i class="bx bxl-facebook-circle text-2xl"></i>
                 </li>
                 <li>
-                  <i class="bx bxl-instagram bx-tada bx-rotate-90 text-2xl"></i>
+                  <i class="bx bxl-instagram text-2xl"></i>
                 </li>
                 <li>
-                  <i class="bx bxl-whatsapp bx-burst bx-rotate-90 text-2xl"></i>
+                  <i class="bx bxl-whatsapp text-2xl"></i>
                 </li>
                 <li>
-                  <i class="bx bxl-twitter bx-spin bx-rotate-90 text-2xl"></i>
+                  <i class="bx bxl-twitter text-2xl"></i>
                 </li>
               </ul>
             </div>
