--- a/saved.html
+++ b/saved.html
@@ -5,6 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Account Page</title>
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/tw-elements/dist/css/index.min.css"
+    />
     <script src="https://cdn.tailwindcss.com"></script>
     <link rel="stylesheet" href="style.css" />
     <script>
@@ -21,10 +25,14 @@
               thirteenBg: "#595959",
               lightGray: "#8C8C8C",
               darkGray: "#595959",
+              smNav: "#333333",
             },
             fontFamily: {
               mont: ["montserrat"],
               san: ["Open Sans"],
+            },
+            screens: {
+              sm: "300px",
             },
           },
         },
@@ -41,8 +49,191 @@
   <body class="">
     <section class="body">
       <div class="bg-gray-200 h-screen">
+        <!-- Nav Here -->
+        <nav
+          role="navigation"
+          class="sm:flex justify-between items-center p-3 lg:px-40 lg:h-28 sm:h-16 sm:py-5 text-white relative bg-white md:hidden"
+        >
+          <a href="index.html" class="ml-6"
+            ><img
+              src="./Assets/Eki-Logo.svg"
+              class="lg:w-full sm:w-3/4 w-20"
+              alt=""
+          /></a>
+          <div class="px-4 cursor-pointer md:hidden" id="bars">
+            <svg
+              xmlns="http://www.w3.org/2000/svg"
+              class="h-6 w-6 text-green-700"
+              fill="none"
+              viewBox="0 0 24 24"
+              stroke="currentColor"
+            >
+              <path
+                stroke-linecap="round"
+                stroke-linejoin="round"
+                stroke-width="2"
+                d="M4 6h16M4 12h16m-7 6h7"
+              />
+            </svg>
+          </div>
+          <div
+            class="hidden md:block mr-4 p-5 space-x-4 z-10 font-semibold text-gray-300"
+            id="menu"
+          >
+            <a
+              href="index.html"
+              class="hover:text-white transition duration-500 ease-in-out text-primary"
+              >Home</a
+            >
+            <a
+              href="products.html"
+              class="hover:text-green-700 transition duration-500 ease-in-out"
+              >Products</a
+            >
+            <a
+              href="notifications.html"
+              class="hover:text-green-700 transition duration-500 ease-in-out"
+              >Notifications</a
+            >
+            <a
+              href="accountPage.html"
+              class="hover:text-green-700 transition duration-500 ease-in-out"
+              >My Account</a
+            >
+            <a
+              href="#"
+              class="hover:text-green-700 transition duration-500 ease-in-out"
+              >Logout</a
+            >
+          </div>
+        </nav>
+
+        <!-- Mobile Nav Bar -->
+        <div
+          class="bg-smNav bg-opacity-90 top-0 left-0 h-screen overflow-hidden fixed hidden z-50 w-full p-5 text-white transition duration-500 ease-in-out"
+          id="mobileNav"
+        >
+          <div class="bg-white fixed top-20 right-0 w-3/4 h-screen">
+            <div class="grid grid-cols-2">
+              <div class="">
+                <img src="./Assets/Eki-white.svg" class="w-16" alt="" />
+              </div>
+            </div>
+
+            <div class="font-mont py-5 font-semibold">
+              <ul class="flex flex-col space-y-5 text-gray-500">
+                <a href="index.html">
+                  <li
+                    class="flex flex-row transition duration-300 ease-in-out hover:text-green-500 hover:border-r-green-500 hover:border-r-4 hover:bg-green-200 p-3"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="h-6 w-6 mr-3"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke="currentColor"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"
+                      />
+                    </svg>
+                    Home
+                  </li>
+                </a>
+                <a href="accountPage.html">
+                  <li
+                    class="flex flex-row transition duration-300 ease-in-out hover:text-green-500 hover:border-r-green-500 hover:border-r-4 hover:bg-green-200 p-3"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="h-6 w-6 mr-3"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke="currentColor"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M4 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2V6zM14 6a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2V6zM4 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2H6a2 2 0 01-2-2v-2zM14 16a2 2 0 012-2h2a2 2 0 012 2v2a2 2 0 01-2 2h-2a2 2 0 01-2-2v-2z"
+                      />
+                    </svg>
+                    Dashboard
+                  </li>
+                </a>
+                <a href="orders.html">
+                  <li
+                    class="flex flex-row transition duration-300 ease-in-out hover:text-green-500 hover:border-r-green-500 hover:border-r-4 hover:bg-green-200 p-3"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="h-6 w-6 mr-3"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke="currentColor"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M16 8v8m-4-5v5m-4-2v2m-2 4h12a2 2 0 002-2V6a2 2 0 00-2-2H6a2 2 0 00-2 2v12a2 2 0 002 2z"
+                      />
+                    </svg>
+                    Orders
+                  </li>
+                </a>
+                <a href="saved.html">
+                  <li
+                    class="flex flex-row transition duration-300 text-green-500 border-r-green-500 border-r-4 bg-green-200 p-3"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="h-6 w-6 mr-3"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke="currentColor"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M11.049 2.927c.3-.921 1.603-.921 1.902 0l1.519 4.674a1 1 0 00.95.69h4.915c.969 0 1.371 1.24.588 1.81l-3.976 2.888a1 1 0 00-.363 1.118l1.518 4.674c.3.922-.755 1.688-1.538 1.118l-3.976-2.888a1 1 0 00-1.176 0l-3.976 2.888c-.783.57-1.838-.197-1.538-1.118l1.518-4.674a1 1 0 00-.363-1.118l-3.976-2.888c-.784-.57-.38-1.81.588-1.81h4.914a1 1 0 00.951-.69l1.519-4.674z"
+                      />
+                    </svg>
+                    Saved
+                  </li>
+                </a>
+                <a href="profile.html">
+                  <li
+                    class="flex flex-row transition duration-300 ease-in-out hover:text-green-500 hover:border-r-green-500 hover:border-r-4 hover:bg-green-200 p-3"
+                  >
+                    <svg
+                      xmlns="http://www.w3.org/2000/svg"
+                      class="h-6 w-6 mr-3"
+                      fill="none"
+                      viewBox="0 0 24 24"
+                      stroke="currentColor"
+                    >
+                      <path
+                        stroke-linecap="round"
+                        stroke-linejoin="round"
+                        stroke-width="2"
+                        d="M16 7a4 4 0 11-8 0 4 4 0 018 0zM12 14a7 7 0 00-7 7h14a7 7 0 00-7-7z"
+                      />
+                    </svg>
+                    Profile
+                  </li>
+                </a>
+              </ul>
+            </div>
+          </div>
+        </div>
+        <!-- Nav Ends Here -->
         <div class="flex flex-row font-mont">
-          <div class="basis-1/4 p-3">
+          <div class="basis-1/4 md:block sm:hidden p-3">
             <div class="rounded-lg bg-white p-5">
               <div class="flex justify-center mb-5">
                 <img src="./Assets/Logo.png" alt="" />
@@ -155,17 +346,46 @@
               </div>
             </div>
           </div>
-          <div class="basis-3/4 p-3">
-            <div class="bg-white rounded-lg h-full">
+          <div class="md:basis-3/4 sm:w-full p-3">
+            <div class="md:bg-white sm:bg-gray-200 rounded-lg h-full">
+              <!-- Replace Top -->
               <div
-                class="bg-gradient-to-r from-green-500 to-green-800 grid grid-cols-2 rounded-tr-lg rounded-tl-lg p-5"
+                class="bg-secondary grid md:grid-cols-2 rounded-tr-lg rounded-tl-lg p-5"
               >
                 <div>
-                  <h1 class="uppercase text-white">Saved</h1>
+                  <h1 class="uppercase text-white flex items-center">Saved</h1>
                 </div>
-                <div class="justify-end flex">
+                <!-- View on Small -->
+                <div class="sm:flex justify-end md:hidden">
+                  <a href="index.html">
+                    <div
+                      class="flex flex-row space-x-1 text-white items-center"
+                    >
+                      <svg
+                        xmlns="http://www.w3.org/2000/svg"
+                        class="h-6 w-6"
+                        fill="none"
+                        viewBox="0 0 24 24"
+                        stroke="currentColor"
+                      >
+                        <path
+                          stroke-linecap="round"
+                          stroke-linejoin="round"
+                          stroke-width="2"
+                          d="M3 12l2-2m0 0l7-7 7 7M5 10v10a1 1 0 001 1h3m10-11l2 2m-2-2v10a1 1 0 01-1 1h-3m-6 0a1 1 0 001-1v-4a1 1 0 011-1h2a1 1 0 011 1v4a1 1 0 001 1m-6 0h6"
+                        />
+                      </svg>
+                      <h1>Go to home</h1>
+                    </div>
+                  </a>
+                </div>
+
+                <!-- Exnd View on small -->
+
+                <!-- View on Large -->
+                <div class="md:flex sm:hidden justify-end">
                   <h1 class="mr-2 text-white">
-                    Wallet Balance: &#8358;12,345,533.00
+                    Wallet Balance: <strong>&#8358;12,345,533.00</strong>
                   </h1>
                   <svg
                     xmlns="http://www.w3.org/2000/svg"
@@ -180,7 +400,9 @@
                     />
                   </svg>
                 </div>
+                <!-- End View on Large -->
               </div>
+              <!-- End of Replaced Top -->
               <div class="flex flex-row p-5">
                 <div class="p-5">
                   <h1 class="uppercase font-medium text-gray-500">
@@ -188,12 +410,10 @@
                   </h1>
                   <hr class="text-gray-400" />
                   <div
-                    class="card-rows flex flex-row space-x-5 justify-center my-5"
+                    class="card-rows flex md:flex-row sm:flex-col md:space-x-5 sm:space-y-5 justify-center my-5"
                   >
-                    <div class="cards w-64">
-                      <div
-                        class="max-w-sm rounded overflow-hidden shadow-lg bg-white"
-                      >
+                    <div class="cards w-64 rounded-lg bg-white">
+                      <div class="max-w-sm rounded overflow-hidden shadow-lg">
                         <div class="image-ctn w-full flex justify-center p-4">
                           <img
                             class=""
@@ -351,5 +571,7 @@
         </div>
       </div>
     </section>
+    <script src="./app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/tw-elements/dist/js/index.min.js"></script>
   </body>
 </html>
